k8s/base/images-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  template:
    spec:
      containers:
      - name: api
        image: ${DOCKER_USERNAME}/fastapi-todo-api:${VERSION}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  template:
    spec:
      containers:
      - name: frontend
        image: ${DOCKER_USERNAME}/fastapi-todo-frontend:${VERSION}
